<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#454545"
    android:gravity="center"
    android:orientation="vertical" >

    <ProgressBar
        android:id="@+id/delete_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/account_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/a_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:text="@string/account_email"/>

            <TextView
                android:id="@+id/account_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:text="@string/default_email"
                android:layout_toRightOf="@id/a_mail"/>

            <TextView
                android:id="@+id/a_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:paddingTop="19sp"
                android:text="Username:"
                android:layout_below="@id/a_mail"/>

            <EditText
                android:id="@+id/account_new_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/a_mail"
                android:layout_toEndOf="@id/a_username"
                android:paddingTop="19sp"
                android:textColor="#FFFFFF"
                android:hint="@string/account_new_username"
                android:inputType="text"
                android:maxLines="1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/a_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_below="@id/a_username">

                <AutoCompleteTextView
                    android:id="@+id/account_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_new"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/a_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_below="@id/a_new_password">
                <AutoCompleteTextView
                    android:id="@+id/account_repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/account_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/a_repeat_password"
                android:text="@string/account_update"/>

            <Button
                android:id="@+id/account_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_update"
                android:text="@string/account_delete"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
